Fix overflow and scrolling behavior

--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -127,7 +127,7 @@
 .page-right-block {
   display: flex;
   flex-direction: column;
-  overflow: scroll;
+  overflow: auto;
 }
 
 .page-left-block {
@@ -145,7 +145,7 @@
   > div {
     margin: auto;
     padding-top: 3vmin;
-    overflow-y: scroll;
+    overflow-y: auto;
     font-size: 1.8vw;
 
     p {
@@ -162,7 +162,7 @@
 
 #page-scroll-content {
   white-space: nowrap;
-  overflow-x: scroll;
+  overflow-x: auto;
   overflow-y: hidden;
   -webkit-overflow-scrolling: touch;
   scroll-snap-type: x mandatory;
